fix(header): submenu was too low

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -348,15 +348,15 @@ $margin-xxl: var(--spacing-xxl);
 ///////////////////////
 /* stylelint-disable-next-line no-duplicate-selectors */
 :root {
-  --header-height: 80px; // ideally we would calculate the size from the current text size plus spacing components so that it scales with the text size and spacing
+  --header-height: 74px; // ideally we would calculate the size from the current text size plus spacing components so that it scales with the text size and spacing
   --search-size: 2.625rem; // This should be calculated from the scaling text and scaling spacing tokens instead of hardcoding in case they change
 
   @media (min-width: $breakpoint-md) {
-    --header-height: 114px; // ideally we would calculate the size from the current text size plus spacing components so that it scales with the text size and spacing
+    --header-height: 108px; // ideally we would calculate the size from the current text size plus spacing components so that it scales with the text size and spacing
   }
 
   @media (min-width: $breakpoint-xl) {
-    --header-height: 126px; // ideally we would calculate the size from the current text size plus spacing components so that it scales with the text size and spacing
+    --header-height: 120px; // ideally we would calculate the size from the current text size plus spacing components so that it scales with the text size and spacing
     --search-size: 2.875rem; // This should be calculated from the scaling text and scaling spacing tokens instead of hardcoding in case they change
   }
 }
